WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101494
[V8] DOMWrapperMap doesn't need to use virtual functions
https://bugs.webkit.org/show_bug.cgi?id=101494
Summary
[V8] DOMWrapperMap doesn't need to use virtual functions
Adam Barth
Reported
2012-11-07 11:26:41 PST
[V8] DOMWrapperMap doesn't need to use virtual functions
Attachments
Patch
(5.39 KB, patch)
2012-11-07 11:27 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-11-07 11:27:30 PST
Created
attachment 172846
[details]
Patch
Kentaro Hara
Comment 2
2012-11-07 11:30:54 PST
Comment on
attachment 172846
[details]
Patch ok
Adam Barth
Comment 3
2012-11-07 13:45:48 PST
Comment on
attachment 172846
[details]
Patch Clearing flags on attachment: 172846 Committed
r133805
: <
http://trac.webkit.org/changeset/133805
>
Adam Barth
Comment 4
2012-11-07 13:45:50 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug