[V8] DOMWrapperMap doesn't need to use virtual functions https://bugs.webkit.org/show_bug.cgi?id=101494

Reviewed by Kentaro Hara.

DOMWrapperMap has only one subclass. There's no reason to use virtual functions.

* bindings/v8/DOMDataStore.cpp:
(WebCore::DOMDataStore::DOMDataStore):
* bindings/v8/DOMWrapperMap.h:
(WebCore::DOMWrapperMap::DOMWrapperMap):
(WebCore::DOMWrapperMap::get):
(WebCore::DOMWrapperMap::set):
(WebCore::DOMWrapperMap::clear):
(WebCore::DOMWrapperMap::reportMemoryUsage):
(WebCore::DOMWrapperMap::remove):
(WebCore::DOMWrapperMap::defaultWeakCallback):
* bindings/v8/V8NPObject.cpp:
(WebCore::staticNPObjectMap):


Canonical link: https://commits.webkit.org/119602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133805 268f45cc-cd09-0410-ab3c-d52691b4dbfc