Source/WebCore/bindings/v8/DOMWrapperMap.h
@@ -39,36 +39,22 @@
 
 namespace WebCore {
 
-class DOMDataStore;
-
 template<class KeyType>
 class DOMWrapperMap {
 public:
-    virtual ~DOMWrapperMap() { }
-
-    virtual v8::Persistent<v8::Object> get(KeyType*) = 0;
-    virtual void set(KeyType*, v8::Persistent<v8::Object>) = 0;
-    virtual void clear() = 0;
-
-    virtual void reportMemoryUsage(MemoryObjectInfo*) const = 0;
-};
-
-template<class KeyType>
-class DOMWrapperHashMap : public DOMWrapperMap<KeyType> {
-public:
     typedef HashMap<KeyType*, v8::Persistent<v8::Object> > MapType;
 
-    explicit DOMWrapperHashMap(v8::WeakReferenceCallback callback = &defaultWeakCallback)
+    explicit DOMWrapperMap(v8::WeakReferenceCallback callback = &defaultWeakCallback)
         : m_callback(callback)
     {
     }
 
-    virtual v8::Persistent<v8::Object> get(KeyType* key) OVERRIDE
+    v8::Persistent<v8::Object> get(KeyType* key)
     {
         return m_map.get(key);
     }
 
-    virtual void set(KeyType* key, v8::Persistent<v8::Object> wrapper) OVERRIDE
+    void set(KeyType* key, v8::Persistent<v8::Object> wrapper)
     {
         ASSERT(!m_map.contains(key));
         ASSERT(static_cast<KeyType*>(toNative(wrapper)) == key);
@@ -76,7 +62,7 @@ public:
         m_map.set(key, wrapper);
     }
 
-    virtual void clear() OVERRIDE
+    void clear()
     {
         for (typename MapType::iterator it = m_map.begin(); it != m_map.end(); ++it) {
             v8::Persistent<v8::Object> wrapper = it->value;
@@ -87,13 +73,13 @@ public:
         m_map.clear();
     }
 
-    virtual void reportMemoryUsage(MemoryObjectInfo* memoryObjectInfo) const OVERRIDE
+    void reportMemoryUsage(MemoryObjectInfo* memoryObjectInfo) const
     {
         MemoryClassInfo info(memoryObjectInfo, this, WebCoreMemoryTypes::Binding);
         info.addMember(m_map);
     }
 
-    virtual void remove(KeyType* key, v8::Persistent<v8::Object> wrapper)
+    void remove(KeyType* key, v8::Persistent<v8::Object> wrapper)
     {
         typename MapType::iterator it = m_map.find(key);
         ASSERT(it != m_map.end());
@@ -104,7 +90,7 @@ public:
 private:
     static void defaultWeakCallback(v8::Persistent<v8::Value> value, void* context)
     {
-        DOMWrapperHashMap<KeyType>* map = static_cast<DOMWrapperHashMap<KeyType>*>(context);
+        DOMWrapperMap<KeyType>* map = static_cast<DOMWrapperMap<KeyType>*>(context);
         ASSERT(value->IsObject());
         v8::Persistent<v8::Object> wrapper = v8::Persistent<v8::Object>::Cast(value);
         WrapperTypeInfo* type = toWrapperTypeInfo(wrapper);
